# agrirobot_ws

esp32/: platformio.ini
esp32/src/: DirveMotor.cpp  ServoTest.cpp  Tester.cpp  motorCTRL.cpp
esp32/src/node_1/: Left_ctrl.cpp
esp32/src/node_2/: Right_ctrl.cpp
esp32/test/: Left_Right.cpp  Nui_joy.cpp  motorCTRLnode.cpp
install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/agrirobot_core/lib/agrirobot_core/: DiffdrivePublisher  diffdrive_publisher  joystick_publisher
install/agrirobot_core/share/agrirobot_core/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/agrirobot_core/share/agrirobot_core/launch/: ros_launch.py
log/: latest_build
src/agrirobot_core/: package.xml  setup.cfg  setup.py
src/agrirobot_core/agrirobot_core/: DiffdrivePublisher.py
src/agrirobot_core/agrirobot_core/launch/: ros_launch.py
src/agrirobot_core/resource/: DiffDriveMotorCTRL.py  MotorTest2.py  main.py  showcam.py
src/agrirobot_core/test/: CamTest.py  ReceiverTest.py  SevoTester.py  cam.py  motorTest.py
