<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agrirobot_core</name>
  <version>0.0.0</version>
  <description>Core nodes and launch files for agrirobot</description>
  <maintainer email="chaiyapruk6494@gmail.com">Pruk</maintainer>
  <license>MIT</license>

  <!-- runtime deps used by your nodes/launch -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <!-- if launch call micro_ros_agent use this-->
  <exec_depend>micro_ros_agent</exec_depend>

  <!-- test deps (as needs) -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

